# game_monitor

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  config.cpp  config.h  hpl_types.h  interface.cpp  interface.h  log.cpp  log.h  main.cpp  pos_types.h  qt_make.bat  qt_make.sh  udp_thread.cpp  udp_thread.h
src/: aspect_ratio_pixmap_label.cpp  aspect_ratio_pixmap_label.h  capture.cpp  capture.h  field_space_manager.cpp  field_space_manager.h  game_monitor.h  game_state.cpp  game_state.h  gcreceiver.cpp  gcreceiver.h  interface.cpp  interface.h  log.cpp  log.h  log_writer.cpp  log_writer.h  main.cpp  pos_types.h  setting_dialog.cpp  setting_dialog.h  types.h  udp_thread.cpp  udp_thread.h
